--- a/.azure-pipelines/azure-pipelines-win.yml
+++ b/.azure-pipelines/azure-pipelines-win.yml
@@ -4,8 +4,7 @@
 
 jobs:
 - job: win
-  pool:
-    vmImage: vs2017-win2016
+  pool: ros-forge-scale-set
   timeoutInMinutes: 360
   strategy:
     maxParallel: 4
