--- a/.azure-pipelines/azure-pipelines-win.yml
+++ b/.azure-pipelines/azure-pipelines-win.yml
@@ -21,7 +21,7 @@ jobs:
 
     - script: |
         @"%SystemRoot%\System32\WindowsPowerShell\v1.0\powershell.exe" -NoProfile -InputFormat None -ExecutionPolicy Bypass -Command " [System.Net.ServicePointManager]::SecurityProtocol = 3072; iex ((New-Object System.Net.WebClient).DownloadString('https://chocolatey.org/install.ps1'))" && SET "PATH=%PATH%;%ALLUSERSPROFILE%\chocolatey\bin"
-        choco install miniconda3 --params="'/AddToPath:1 /D:C:\miniconda3'" -y
+        choco install miniconda3 --params="'/InstallationType:JustMe /AddToPath:1 /D:C:\miniconda3'" -y
 
     - script: |
         choco install vcpython27 -fdv -y --debug
