--- a/.azure-pipelines/azure-pipelines-win.yml
+++ b/.azure-pipelines/azure-pipelines-win.yml
@@ -13,6 +13,7 @@ jobs:
         CONFIG: win_
         CONDA_BLD_PATH: D:\\bld\\
         UPLOAD_PACKAGES: True
+        CONDA: C:\\Miniconda3
   steps:
     # TODO: Fast finish on azure pipelines?
     - script: |
@@ -21,10 +22,7 @@ jobs:
 
     - script: |
         powershell -Command "Invoke-WebRequest https://repo.anaconda.com/miniconda/Miniconda3-latest-Windows-x86_64.exe -OutFile Miniconda3-latest-Windows-x86_64.exe"
-        start /wait "" Miniconda3-latest-Windows-x86_64.exe /InstallationType=JustMe /AddToPath=1 /RegisterPython=1 /S /D=%UserProfile%\Miniconda3
-
-    - powershell: Write-Host "##vso[task.prependpath]$env:UserProfile\Miniconda3\Scripts"
-      displayName: Add conda to PATH
+        start /wait "" Miniconda3-latest-Windows-x86_64.exe /InstallationType=JustMe /AddToPath=1 /RegisterPython=1 /S /D=C:\Miniconda3
 
     - script: |
         choco install vcpython27 -fdv -y --debug
