--- a/.azure-pipelines/azure-pipelines-win.yml
+++ b/.azure-pipelines/azure-pipelines-win.yml
@@ -23,6 +23,19 @@ jobs:
     - script: |
         powershell -Command "Invoke-WebRequest https://repo.anaconda.com/miniconda/Miniconda3-latest-Windows-x86_64.exe -OutFile Miniconda3-latest-Windows-x86_64.exe"
         start /wait "" Miniconda3-latest-Windows-x86_64.exe /InstallationType=JustMe /AddToPath=1 /RegisterPython=1 /S /D=C:\Miniconda3
+        
+    - powershell:
+        Write-Host "##vso[task.prependpath]C:\Miniconda3\"
+        Write-Host "##vso[task.prependpath]C:\Miniconda3\Library\mingw-w64\bin"
+        Write-Host "##vso[task.prependpath]C:\Miniconda3\Library\usr\bin"
+        Write-Host "##vso[task.prependpath]C:\Miniconda3\Library\bin"
+        Write-Host "##vso[task.prependpath]C:\Miniconda3\Scripts"
+        Write-Host "##vso[task.prependpath]C:\Miniconda3\bin"
+        Write-Host "##vso[task.prependpath]C:\Miniconda3\condabin"
+      displayName: Add conda to PATH
+      
+    - script: |
+        set PATH
 
     - script: |
         choco install vcpython27 -fdv -y --debug
