--- a/.azure-pipelines/azure-pipelines-win.yml
+++ b/.azure-pipelines/azure-pipelines-win.yml
@@ -21,6 +21,10 @@ jobs:
         
 
     - script: |
+        @"%SystemRoot%\System32\WindowsPowerShell\v1.0\powershell.exe" -NoProfile -InputFormat None -ExecutionPolicy Bypass -Command " [System.Net.ServicePointManager]::SecurityProtocol = 3072; iex ((New-Object System.Net.WebClient).DownloadString('https://chocolatey.org/install.ps1'))" && SET "PATH=%PATH%;%ALLUSERSPROFILE%\chocolatey\bin"
+        choco install openssl.light -y
+
+    - script: |
         dir c:\Miniconda
         curl https://repo.anaconda.com/miniconda/Miniconda3-4.6.14-Windows-x86_64.exe --output Miniconda3-latest-Windows-x86_64.exe
         start /wait "" Miniconda3-latest-Windows-x86_64.exe /AddToPath=0 /RegisterPython=0 /S /D=C:\Miniconda
@@ -35,6 +39,7 @@ jobs:
         echo ##vso[task.prependpath]C:\Miniconda\Library\mingw-w64\bin
         echo ##vso[task.prependpath]C:\Miniconda
       displayName: Add conda to PATH
+      condition: contains(variables['CONFIG'], 'vs2008')
       
     - script: |
         set PATH
