--- a/.azure-pipelines/azure-pipelines-win.yml
+++ b/.azure-pipelines/azure-pipelines-win.yml
@@ -11,7 +11,7 @@ jobs:
     matrix:
       win_:
         CONFIG: win_
-        CONDA_BLD_PATH: C:\bld\
+        # CONDA_BLD_PATH: C:\bld\
         UPLOAD_PACKAGES: False
         CONDA: C:\Miniconda
   steps:
