--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -646,7 +646,7 @@ outputs:
         - pycairo
         - pycryptodome
         - pydot
-        - pyqt
+        - pyqt 5.12.3=*_1
         - python {{ python }}
         - python-gnupg
         - python-orocos-kdl
