--- a/recipe/conda_build_config.yaml
+++ b/recipe/conda_build_config.yaml
@@ -10,3 +10,7 @@ vc:                            # [win]
   - 14                         # [win]
 python:                        # [win]
   - 3.7                        # [win]
+pyqt:                          # [win]
+  - 5.12.3=*_1                 # [win]
+sip:                           # [win]
+  - 4.19.20                    # [win]
