--- a/.ci_support/osx_python3.6.____cpython.yaml
+++ b/.ci_support/osx_python3.6.____cpython.yaml
@@ -1,17 +1,27 @@
+MACOSX_DEPLOYMENT_TARGET:
+- '10.9'
 bzip2:
 - '1'
 c_compiler:
-- vs2017
+- clang
+c_compiler_version:
+- '9'
 channel_sources:
 - ros-forge,conda-forge,defaults
 channel_targets:
 - ros-forge main
 cxx_compiler:
-- vs2017
+- clangxx
+cxx_compiler_version:
+- '9'
 libcurl:
 - '7'
 libjpeg_turbo:
 - '2'
+macos_machine:
+- x86_64-apple-darwin13.4.0
+macos_min_version:
+- '10.9'
 numpy:
 - '1.14'
 openssl:
@@ -30,9 +40,7 @@ pin_run_as_build:
     max_pin: x.x
   qt:
     max_pin: x.x
-pyqt:
-- 5.12.3=*_1
 python:
-- '3.7'
+- 3.6.* *_cpython
 qt:
 - '5.12'
