--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -136,6 +136,8 @@ source:
   - git_url: https://github.com/ros-gbp/gazebo_ros_pkgs-release.git
     git_rev: release/noetic/gazebo_plugins/2.9.1-1
     folder: src/ros-noetic-gazebo-plugins
+    patches:
+      - patch/ros-noetic-gazebo-plugins.patch
   - git_url: https://github.com/ros-gbp/gazebo_ros_pkgs-release.git
     git_rev: release/noetic/gazebo_ros/2.9.1-1
     folder: src/ros-noetic-gazebo-ros
