--- a/recipe/conda_build_config.yaml
+++ b/recipe/conda_build_config.yaml
@@ -14,3 +14,5 @@ pyqt:                          # [win]
   - 5.12.3=*_1                 # [win]
 sip:                           # [win]
   - 4.19.20                    # [win]
+assimp:                        # [win]
+  - 4                          # [win]
