--- a/.ci_support/linux_python3.6.____cpython.yaml
+++ b/.ci_support/linux_python3.6.____cpython.yaml
@@ -14,6 +14,8 @@ cxx_compiler_version:
 - '7'
 docker_image:
 - condaforge/linux-anvil-comp7
+harfbuzz:
+- '2'
 libcurl:
 - '7'
 libjpeg_turbo:
@@ -24,6 +26,8 @@ openssl:
 - 1.1.1
 pin_run_as_build:
   bzip2:
+    max_pin: x
+  harfbuzz:
     max_pin: x
   libcurl:
     max_pin: x
